@@ -1,3 +1,5 @@
+(2001/08/03 - broeker) Use %option noyywrap in fscanner.l to avoid problems
+	               with broken flex installations that can't find -lfl. 
 (2001/07/12 - dixon)   Updated INSTALL with new configure info for HP-UX.
 (2001/07/11 - broeker) Fixed #if syntax glitch in cohrs' SUNOS change.
 (2001/07/09 - petrs)   Substituted lstat() for stat() to prevent core
